Fix/7659 qa websites other identifiers keywords countries spacing sizing and alignment issues (#1208)
* fix: side bar styling issues

see trello card for details

fixes issue 7659

* fix: refactor drag and drop functionality

* improve drag and drop in side modals

* 🤖 GITHUB ACTIONS: formatting 🤖

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -54,7 +54,7 @@ mat-form-field {
   }
   mat-icon,
   .other-names {
-    margin-inline-start: 10px;
+    margin-inline-start: 12px;
   }
 }
 
